<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Display"
        android:key="pref_buses">
        <ListPreference
            android:key="pref_distance_units"
            android:title="@string/distance_units"
            android:summary="@string/distance_units_summary"
            android:entries="@array/distance_units_entries"
            android:entryValues="@array/distance_units_entry_values" />
        <CheckBoxPreference
            android:key="pref_view_bus_services"
            android:title="@string/view_bus_services"
            android:summary="@string/view_bus_services_summary"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_view_extra_data"
            android:title="@string/view_extra_data"
            android:summary="@string/view_extra_data_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Sharing"
        android:key="pref_sharing">
        <CheckBoxPreference
            android:key="pref_share_public"
            android:title="@string/share_public"
            android:summary="@string/share_public_summary"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_share_facebook"
            android:title="@string/share_facebook"
            android:summary="@string/share_facebook_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
