<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".JourneyLegActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:theme="@style/ToolBar" />

        <TextView
            style="@style/FormSectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/departure" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/departure_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="10dp"
                android:textIsSelectable="false"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/departure_station"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:padding="10dp"
                android:textIsSelectable="false"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/departure_platform"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/platform"
                android:inputType="textCapCharacters"
                android:padding="10dp" />
        </LinearLayout>

        <TextView
            style="@style/FormSectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arrival" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/arrival_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="10dp"
                android:textIsSelectable="false"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/arrival_station"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:padding="10dp"
                android:textIsSelectable="false"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/arrival_platform"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="14"
                android:hint="@string/platform"
                android:inputType="textCapCharacters"
                android:padding="10dp" />
        </LinearLayout>

        <Button
            android:id="@+id/save"
            style="@style/FormButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>

</ScrollView>